--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,15 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
-.logo {
+.header__logo {
   height: 3.5rem;
 }
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -63,7 +63,7 @@ body {
   backface-visibility: hidden;
   margin-bottom: 6rem;
 }
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -72,9 +72,9 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-in;
 }
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
-  font-size: rem;
+  font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1.75rem;
   animation-name: moveInRight;
@@ -155,14 +155,14 @@ body {
   z-index: -1;
   transition: all 0.4s;
 }
-.btn-white:after {
+.btn--white:after {
   background-color: #fff;
 }
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0;
 }
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards;
 }
