--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,6 @@ body {
   line-height: 1.7;
   color: $color-grey-dark;
   padding: 3rem;
-
 }
 .heading-primary {
   color: $color-white;
@@ -29,5 +28,16 @@ body {
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-in;
+  }
+}
+.heading-tertiary {
+  font-size: $default-font-size;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.paragraph {
+  font-size: $default-font-size;
+  &:not(:last-child) {
+    margin-bottom: 3rem;
   }
 }
