--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -18,3 +18,8 @@
   }
   margin-top: -7.5rem;
 }
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
+}
