--- a/sass/abstacts/_variables.scss
+++ b/sass/abstacts/_variables.scss
@@ -11,6 +11,7 @@ $color-grey-dark: #777;
 $color-white: white;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 
 //Font
 $default-font-size: 1.6rem;
