--- a/sass/abstacts/_variables.scss
+++ b/sass/abstacts/_variables.scss
@@ -13,6 +13,7 @@ $color-white: white;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-dark-3: #333;
 
 //Font
 $default-font-size: 1.6rem;
