--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ body {
   transition: all 0.2s;
   position: relative;
   font-size: 1.6rem;
+  backface-visibility: hidden;
   border: none;
   cursor: pointer; }
 
@@ -455,14 +456,34 @@ body {
   opacity: 1; }
 
 .popup {
+  opacity: 0;
+  visibility: hidden;
   height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999; }
+  z-index: 9999;
+  transition: all 0.3s;
+  backface-visibility: hidden; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all 0.2s;
+    line-height: 1; }
+  .popup__close:hover {
+    color: #55c57a; }
   .popup__content {
+    backface-visibility: hidden;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -473,7 +494,13 @@ body {
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: all 0.3s; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
   .popup__left {
     width: 33.33333%;
     display: table-cell; }
@@ -484,7 +511,8 @@ body {
     padding: 3rem 5rem; }
   .popup__img {
     display: block;
-    width: 100%; }
+    width: 100%;
+    backface-visibility: hidden; }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
@@ -493,7 +521,8 @@ body {
     column-rule: 1px solid #999;
     word-wrap: break-word;
     overflow-wrap: break-word;
-    -webkit-hyphens: auto; }
+    -webkit-hyphens: auto;
+    backface-visibility: hidden; }
 
 .row {
   max-width: 114rem;
