--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,14 +1,41 @@
 .popup {
+  opacity: 0;
+  visibility: hidden;
   height: 100vh;
   width: 100%;
+
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba($color-black, 0.8);
   z-index: 9999;
-  &__content {
-    @include absCenter;
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
 
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 2.5rem;
+      right: 2.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      transition: all 0.2s;
+      line-height: 1;
+    }
+    &:hover {
+      color: $color-primary;
+    }
+  }
+  &__content {
+    backface-visibility: hidden;
+    @include absCenter;
     width: 75%;
     height: 45rem;
     background-color: $color-white;
@@ -16,6 +43,13 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.5);
+    transition: all 0.3s;
+  }
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
   &__left {
     width: 33.33333%;
@@ -30,6 +64,7 @@
   &__img {
     display: block;
     width: 100%;
+    backface-visibility: hidden;
   }
   &__text {
     font-size: 1.4rem;
@@ -39,7 +74,7 @@
     column-rule: 1px solid $color-grey-dark-2;
     word-wrap: break-word;
     overflow-wrap: break-word;
-
     -webkit-hyphens: auto;
+    backface-visibility: hidden;
   }
 }
