--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 @charset "UTF-8";
+/*
+0-600px   phone
+600-900   tablet portrait
+900-1200  tablet landscape
+1200-1800 normal styles
+1800++    big desktop
+*/
+/*
+$breakpoint argument choices:
+-phone
+-tab-port
+-tab-land
+-big-desktop
+
+1em = 16px  судя по опыту лучше использовать em in media-queries
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -39,6 +55,15 @@
 html {
   /*пишем не 10пикселей, а в процентах, чтобы пользователи могли менять шрифт у себя*/
   font-size: 62.5%; }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
