--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,19 @@
 .header {
   height: 95vh;
   background-image: linear-gradient(
-                  to right,
-                  rgba($color-primary-light, 0.8),
-                  rgba($color-primary-dark, 0.8)
-  ),
-  url('../img/hero.jpg');
+      to right,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url('../img/hero.jpg');
   background-size: cover;
   background-position: top;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  &__logo-box{
+  @include respond(phone) {
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+  &__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
@@ -26,6 +29,3 @@
     text-align: center;
   }
 }
-
-
-
