--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,9 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 .section-features {
   padding: 20rem 0;
@@ -17,15 +20,24 @@
     transform: skewY(7deg);
   }
   margin-top: -7.5rem;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 .section-tours {
   background-color: $color-grey-light-1;
   padding: 25rem 0 5rem 0;
   margin-top: -10rem;
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 .section-stories {
   position: relative;
   padding: 15rem 0;
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 .section-book {
   padding: 15rem 0;
@@ -34,6 +46,9 @@
     $color-primary-light,
     $color-primary-dark
   );
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 .book {
   background-image: linear-gradient(
