--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,7 +15,7 @@
     height: 95vh;
   }
 
-  @media (min-resolution: 192dpi) and (min-width: 37.5em) {
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-secondary-light, 0.8),
@@ -23,7 +23,7 @@
       ),
       url('../img/hero.jpg');
   }
-  @media (min-width: 125em) {
+  @media only screen and (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-secondary-light, 0.8),
